--- a/lang/en.json
+++ b/lang/en.json
@@ -3,6 +3,7 @@
   "nav_about": "About Us",
   "nav_products": "Products",
   "nav_news": "News",
+  "nav_faq": "Questions",
   "nav_contact": "Contact",
   "hero_title": "Pure Salt. Pure Life.",
   "hero_desc": "Discover the finest quality salt products from the heart of nature",
