--- a/lang/ru.json
+++ b/lang/ru.json
@@ -3,6 +3,7 @@
   "nav_about": "О нас",
   "nav_products": "Продукты",
   "nav_news": "Новости",
+  "nav_faq": "Вопросы",
   "nav_contact": "Контакт",
   "hero_title": "Чистая соль. Чистая жизнь.",
   "hero_desc": "Откройте лучшие солевые продукты из сердца природы",
