--- a/lang/uz.json
+++ b/lang/uz.json
@@ -3,6 +3,7 @@
   "nav_about": "Biz haqimizda",
   "nav_products": "Mahsulotlarimiz",
   "nav_news": "Yangiliklar",
+  "nav_faq": "Savollar",
   "nav_contact": "Kontakt",
   "hero_title": "Toza tuz. Toza hayot.",
   "hero_desc": "Tabiat qalbidan eng yaxshi sifatli tuz mahsulotlarini kashf eting",
