--- a/lang/en.json
+++ b/lang/en.json
@@ -23,11 +23,11 @@
   "products_subtitle": "High-quality salt for every need",
   "product_1": "Crystal Salt 1kg",
   "product_2": "Crystal Salt 2kg",
-  "product_3": "Bek Barakat 500g",
+  "product_3": "Crystal Salt 2.5kg",
   "product_1_desc": "Rich in minerals, ideal for cooking and health.",
   "product_2_desc": "Delicate pyramid flakes that dissolve quickly.",
   "product_3_desc": "Fine salt with a smoky flavor, perfect for presentation.",
-  "price": "UZS",
+  "price": "Price negotiable",
   "badge_popular": "Popular",
   "badge_new": "New",
   "news_title": "Latest News",
