--- a/lang/ru.json
+++ b/lang/ru.json
@@ -23,11 +23,11 @@
   "products_subtitle": "Высококачественная соль на любой вкус",
   "product_1": "Кристаллическая соль 1кг",
   "product_2": "Кристаллическая соль 2кг",
-  "product_3": "Бек Баракат 500г",
+  "product_3": "Кристаллическая соль 2.5кг",
   "product_1_desc": "Богата минералами, полезна для готовки и здоровья.",
   "product_2_desc": "Мелкие хлопья пирамидальной формы быстро растворяются.",
   "product_3_desc": "Мелкая соль с дымчатым вкусом, идеально для подачи.",
-  "price": "сум",
+  "price": "Цена договорная",
   "badge_popular": "Популярно",
   "badge_new": "Новинка",
   "news_title": "Последние Новости",
