--- a/lang/uz.json
+++ b/lang/uz.json
@@ -23,11 +23,11 @@
   "products_subtitle": "Har qanday ehtiyoj uchun yuqori sifatli tuz",
   "product_1": "Kristall Tuz 1kg",
   "product_2": "Kristall Tuz 2kg",
-  "product_3": "Bek Barakot 500 gr",
+  "product_3": "Kristall Tuz 2.5kg",
   "product_1_desc": "Minerallarga boy, pishirish va sog'liq uchun foyda.",
   "product_2_desc": "Nozik piramida shaklidagi yoriqlar tez eriydi.",
   "product_3_desc": "Dramatik rang va nozik tutunli ta'mga ega mayda tuz.",
-  "price": "sum",
+  "price": "Narxi kelishilgan holda",
   "badge_popular": "Mashhur",
   "badge_new": "Yangi",
   "news_title": "So'nggi Xabarlar",
