edited footer description

--- a/lang/en.json
+++ b/lang/en.json
@@ -51,7 +51,7 @@
   "newsletter_title": "Newsletter",
   "newsletter_desc": "Subscribe to get the latest updates and offers.",
   "newsletter_placeholder": "Your email address",
-  "footer_desc": "Providing high-quality salt products since 2004.",
+  "footer_desc": "Quality production and trusted delivery — since 2004!",
   "copyright": "All rights reserved.",
   "privacy_policy": "Privacy Policy",
   "terms_service": "Terms of Service",
