--- a/lang/ru.json
+++ b/lang/ru.json
@@ -51,7 +51,7 @@
   "newsletter_title": "Подписка на новости",
   "newsletter_desc": "Подпишитесь, чтобы получать обновления и предложения.",
   "newsletter_placeholder": "Ваш email адрес",
-  "footer_desc": "С 2004 года поставляем высококачественную соль.",
+  "footer_desc": "Качественное производство и надёжная доставка — с 2004 года!",
   "copyright": "Все права защищены.",
   "privacy_policy": "Политика конфиденциальности",
   "terms_service": "Условия обслуживания",
