--- a/lang/uz.json
+++ b/lang/uz.json
@@ -51,7 +51,7 @@
   "newsletter_title": "Yangiliklar xabarnomasi",
   "newsletter_desc": "Yangilanishlar va takliflar uchun xabarnomaga obuna bo'ling.",
   "newsletter_placeholder": "Elektron pochta manzilingiz",
-  "footer_desc": "2004 yildan beri yuqori sifatli tuz mahsulotlari bilan ta'minlash.",
+  "footer_desc": "2004 yildan beri sifatli mahsulotlarni ishlab chiqaramiz va sizga yetkazamiz!",
   "copyright": "Barcha huquqlar himoyalangan.",
   "privacy_policy": "Maxfiylik siyosati",
   "terms_service": "Xizmat shartlari",
