--- a/lang/en.json
+++ b/lang/en.json
@@ -23,10 +23,18 @@
   "products_subtitle": "High-quality salt for every need",
   "product_1": "Crystal Salt 1kg",
   "product_2": "Crystal Salt 2kg",
-  "product_3": "Crystal Salt 2.5kg",
-  "product_1_desc": "Rich in minerals, ideal for cooking and health.",
-  "product_2_desc": "Delicate pyramid flakes that dissolve quickly.",
-  "product_3_desc": "Fine salt with a smoky flavor, perfect for presentation.",
+  "product_3": "Crystal Salt 0.75kg",
+  "product_4": "Extra salt 800 g",
+  "product_5": "Crystalline edible salt 2.5 kg",
+  "product_6": "Crystalline edible salt 2 kg",
+  "product_7": "Crystalline edible salt 1 kg",
+  "product_1_desc": "Iodized and table salt of the highest grade, 1 kg",
+  "product_2_desc": "Iodized and table salt of the highest grade, 2 kg",
+  "product_3_desc": "Iodized and table salt of the highest grade, 0.75 kg",
+  "product_4_desc": "Extra refined salt 800gr",
+  "product_5_desc": "Purified and dried iodized table salt 2.5 kg",
+  "product_6_desc": "Purified and dried iodized table salt 2 kg",
+  "product_7_desc": "Purified and dried iodized table salt 1 kg",
   "price": "Price negotiable",
   "badge_popular": "Popular",
   "badge_new": "New",
