--- a/lang/ru.json
+++ b/lang/ru.json
@@ -21,12 +21,20 @@
   "slide_caption_3": "Строгий контроль качества",
   "products_title": "Наши Продукты",
   "products_subtitle": "Высококачественная соль на любой вкус",
-  "product_1": "Кристаллическая соль 1кг",
-  "product_2": "Кристаллическая соль 2кг",
-  "product_3": "Кристаллическая соль 2.5кг",
-  "product_1_desc": "Богата минералами, полезна для готовки и здоровья.",
-  "product_2_desc": "Мелкие хлопья пирамидальной формы быстро растворяются.",
-  "product_3_desc": "Мелкая соль с дымчатым вкусом, идеально для подачи.",
+  "product_1": "Белоснежная соль 1кг",
+  "product_2": "Белоснежная соль 2кг",
+  "product_3": "Белоснежная соль 0.75кг",
+  "product_4": "Экстра соль 800 гр",
+  "product_5": "Кристаллическая пищевая соль 2.5 кг",
+  "product_6": "Кристаллическая пищевая соль 2 кг",
+  "product_7": "Кристаллическая пищевая соль 1 кг",
+  "product_1_desc": "Соль пищевая йодированная и поваренная высшего сорта, 1 кг",
+  "product_2_desc": "Соль пищевая йодированная и поваренная высшего сорта, 2 кг",
+  "product_3_desc": "Соль пищевая йодированная и поваренная высшего сорта, 0.75 кг",
+  "product_4_desc": "Экстра паваренный соль 800гр",
+  "product_5_desc": "Соль пищевая йодированная, очищенная и высушенная 2.5 кг",
+  "product_6_desc": "Соль пищевая йодированная, очищенная и высушенная 2 кг",
+  "product_7_desc": "Соль пищевая йодированная, очищенная и высушенная 1 кг",
   "price": "Цена договорная",
   "badge_popular": "Популярно",
   "badge_new": "Новинка",
