--- a/lang/uz.json
+++ b/lang/uz.json
@@ -21,12 +21,20 @@
   "slide_caption_3": "Qattiq sifat nazorati",
   "products_title": "Mahsulotlarimiz",
   "products_subtitle": "Har qanday ehtiyoj uchun yuqori sifatli tuz",
-  "product_1": "Kristall Tuz 1kg",
-  "product_2": "Kristall Tuz 2kg",
-  "product_3": "Kristall Tuz 2.5kg",
-  "product_1_desc": "Minerallarga boy, pishirish va sog'liq uchun foyda.",
-  "product_2_desc": "Nozik piramida shaklidagi yoriqlar tez eriydi.",
-  "product_3_desc": "Dramatik rang va nozik tutunli ta'mga ega mayda tuz.",
+  "product_1": "Kristall-Tuz 1kg",
+  "product_2": "Kristall-Tuz 2kg",
+  "product_3": "Kristall-Tuz 0.75kg",
+  "product_4": "Ekstra tuz 800 gr",
+  "product_5": "Kristall osh tuzi 2.5 kg",
+  "product_6": "Kristall osh tuzi 2 kg",
+  "product_7": "Kristall osh tuzi 1 kg",
+  "product_1_desc": "Yuqori sifatli, yodlangan va qaynatilgan osh tuzi, 1 kg",
+  "product_2_desc": "Yuqori sifatli, yodlangan va qaynatilgan osh tuzi, 2 kg",
+  "product_3_desc": "Yuqori sifatli, yodlangan va qaynatilgan osh tuzi, 0.75 kg",
+  "product_4_desc": "Yuqori sifatli, yodlangan va qaynatilgan EXTRA osh tuzi, 800gr",
+  "product_5_desc": "Tozalangan va quritilgan, yodlangan osh tuzi 2.5 kg",
+  "product_6_desc": "Tozalangan va quritilgan, yodlangan osh tuzi 2 kg",
+  "product_7_desc": "Tozalangan va quritilgan, yodlangan osh tuzi 1 kg",
   "price": "Narxi kelishilgan holda",
   "badge_popular": "Mashhur",
   "badge_new": "Yangi",
